<resources>
    <string name="app_name">resistencia</string>
    <string name="calculater">calculadora de resistencias</string>
    <string name="firsbanda">cheke el color de la primera banda</string>
    <string name="black">negro</string>
    <string name="brown">marron</string>
    <string name="red">rojo</string>
    <string name="orange">naranja</string>
    <string name="green">verde</string>
    <string name="yellow">amarillo</string>
    <string name="blue">azul</string>
    <string name="purple">purpura</string>
    <string name="grey">gris</string>
    <string name="white">blanco</string>
    <string name="seconbanda">cheke el color de la seunda banda</string>
    <string name="thirdbanda">cheke la tercera banda</string>
    <string name="fourbanda">cheke el color de la cuarta banga</string>
    <string name="twobanda">negro</string>
    <string name="twobrown">marron</string>
    <string name="twored">rojo</string>
    <string name="twoorange">naranja</string>
    <string name="twoyellow">amarillo</string>
    <string name="twogreen">verde</string>
    <string name="twoblue">azul</string>
    <string name="twopurple">purpura</string>
    <string name="twogrey">gris</string>
    <string name="twowhite">blanco</string>
    <string name="tresnegro">negro</string>
    <string name="tresmarron">marron</string>
    <string name="tresrojo">rojo</string>
    <string name="tresnaranja">naranja</string>
    <string name="tresamarillo">amarillo</string>
    <string name="tresverde">verde</string>
    <string name="tresazul">azul</string>
    <string name="trespurpura">purpura</string>
    <string name="tresgris">gris</string>
    <string name="tresblanco">blanco</string>
    <string name="cuatronegro">negro</string>
    <string name="cuatromarron">marron</string>
    <string name="cuatrorojo">rojo</string>
    <string name="cuatronaranja">naranja</string>
    <string name="cuatroamarillo">amarillo</string>
    <string name="cuatroverde">verde</string>
    <string name="cuatroazul">azul</string>
    <string name="cuatropurpura">purpura</string>
    <string name="cuatrogris">gris</string>
    <string name="cuatroblanco">blanco</string>
    <string name="valor">valor de la resistencia</string>
</resources>